# CO-Bench

./: dl_eval_code.py  pyproject.toml  run_agent.py  test_greedyrefine.py
Aircraft landing/: config.py  evaluate.py  orig.py
agents/: new_reevo.py  reevo.py  utils.py
agents/aide_agent/backend/: backend_openai.py
agents/chain_expert/: utils.py
agents/chain_expert/experts/: modeling_expert.py
agents/mcts/utils/llm_client/: litellm.py
evaluation/: utils.py
